@@ -3,9 +3,12 @@
 
 #include "../account/account.h"
 
+#define MAX_PORT 49151
+#define MIN_PORT 1024
+
 unsigned short getRandomPort();
 char*          portToUri(unsigned short port);
-unsigned short getPortFromUri(const char* uri);
+unsigned int   getPortFromUri(const char* uri);
 char* findRedirectUriByPort(struct oidc_account a, unsigned short port);
 
 #endif  // PORT_UTILS_H
