@@ -138,5 +138,7 @@ oidc-agent (2.1.2) UNRELEASED; urgency=medium
   * Fixed a bug displaying a (wrong) error message when token revocation
     succeeded and the server answered with an empty response when using
     encrypted ipc communication 
+  * Fixed a bug where the browser would not redirect to the webserver when the
+    chosen port was to high
 
  -- Marcus Hardt <hardt@kit.edu>  Mon, 10 Dec 2018 13:49:27 +0100
